--- a/staff/aitor-parra/array-functions/index.html
+++ b/staff/aitor-parra/array-functions/index.html
@@ -10,17 +10,17 @@
 
     <script src="testa-mento-2.0.0.js"></script>
 
-    <script src="for-each.js"></script>
-    <script src="for-each.demo.js"></script>
+    <!-- <script src="for-each.js"></script>
+    <script src="for-each.demo.js"></script> -->
 
     <script src="push.js"></script>
     <script src="push.demo.js"></script>
 
-    <script src="pop.js"></script>
+    <!-- <script src="pop.js"></script>
     <script src="pop.demo.js"></script>
 
     <script src="map.js"></script>
-    <script src="map.demo.js"></script>
+    <script src="map.demo.js"></script> -->
 
     <script src="includes.js"></script>
     <script src="includes.demo.js"></script>
