--- a/staff/aitor-parra/hooray/index.html
+++ b/staff/aitor-parra/hooray/index.html
@@ -10,7 +10,9 @@
     <script src="testa-mento-2.0.2.js"></script>
 
     <script src="hooray.js"></script>
-    <script src="hooray.for-each.test.js"></script>
-    <script src="hooray.push.test.js"></script>
+    <!-- <script src="hooray.for-each.test.js"></script>
+    <script src="hooray.push.test.js"></script> -->
+
+    <script src="hooray.pop.test.js"></script>
 </body>
 </html>
