--- a/staff/aitor-parra/hooray/SpecRunner.html
+++ b/staff/aitor-parra/hooray/SpecRunner.html
@@ -12,17 +12,14 @@
   <script src="lib/jasmine-3.5.0/boot.js"></script>
 
   <!-- include source files here... -->
-  <script src="for-each-recursive.js"></script>
-  <script src="push.js"></script>
-  <script src="slice.js"></script>
-  <script src="shuffle.js"></script>
+  
   <script src="hooray.js"></script>
   
   <!-- include spec files here... -->
-  <script src="for-each.spec.js"></script>
-  <script src="push.spec.js"></script>
-  <script src="slice.spec.js"></script>
-  <script src="shuffle.spec.js"></script>
+  <script src="hooray.for-each.spec.js"></script>
+  <script src="hooray.push.spec.js"></script>
+  <script src="hooray.slice.spec.js"></script>
+  <!-- <script src="shuffle.spec.js"></script> -->
   <script src="hooray.pop.spec.js"></script>
   
 
