update array functions on jasmine

--- a/staff/aitor-parra/array-functions/SpecRunner.html
+++ b/staff/aitor-parra/array-functions/SpecRunner.html
@@ -12,11 +12,12 @@
   <script src="lib/jasmine-3.5.0/boot.js"></script>
 
   <!-- include source files here... -->
-  <script src="for-each-recursive.js"></script>
+  <script src="for-each.js"></script>
   <script src="push.js"></script>
   <script src="slice.js"></script>
   <script src="shuffle.js"></script>
   <script src="pop.js"></script>
+  <script src="map.js"></script>
   
   <!-- include spec files here... -->
   <script src="for-each.spec.js"></script>
@@ -24,6 +25,7 @@
   <script src="slice.spec.js"></script>
   <script src="shuffle.spec.js"></script>
   <script src="pop.spec.js"></script>
+  <script src="map.spec.js"></script>
   
 
 </head>
