update array-functions jasmine index

--- a/staff/aitor-parra/array-functions/SpecRunner.html
+++ b/staff/aitor-parra/array-functions/SpecRunner.html
@@ -12,20 +12,22 @@
   <script src="lib/jasmine-3.5.0/boot.js"></script>
 
   <!-- include source files here... -->
-  <script src="for-each.js"></script>
+  <!-- <script src="for-each.js"></script>
   <script src="push.js"></script>
   <script src="slice.js"></script>
-  <script src="shuffle.js"></script>
-  <script src="pop.js"></script>
-  <script src="map.js"></script>
+  <script src="shuffle.js"></script> -->
+ <!--  <script src="pop.js"></script> -->
+  <script src="pop/index.js"></script>
+  <!-- <script src="map.js"></script> -->
   
   <!-- include spec files here... -->
-  <script src="for-each.spec.js"></script>
+  <!-- <script src="for-each.spec.js"></script>
   <script src="push.spec.js"></script>
   <script src="slice.spec.js"></script>
-  <script src="shuffle.spec.js"></script>
-  <script src="pop.spec.js"></script>
-  <script src="map.spec.js"></script>
+  <script src="shuffle.spec.js"></script> -->
+  <!-- <script src="pop.spec.js"></script> -->
+  <script src=pop/index.spec.js"></script>
+  <!-- <script src="map.spec.js"></script> -->
   
 
 </head>
