--- a/staff/aitor-parra/array-functions/SpecRunner.html
+++ b/staff/aitor-parra/array-functions/SpecRunner.html
@@ -17,8 +17,10 @@
   <script src="slice/index.js"></script>
   <script src="shuffle/index.js"></script> 
   <script src="pop.js"></script> -->
-  <script src="pop/index.js"></script>
+  <!-- <script src="pop/index.js"></script> -->
   <!-- <script src="map/index.js"></script> -->
+  <script src="reduce/index.js"></script>
+
   
   <!-- include spec files here... -->
   <!-- <script src="for-each/index.spec.js"></script>
@@ -26,8 +28,9 @@
   <script src="slice/index.spec.js"></script>
   <script src="shuffle/index.spec.js"></script>
   <script src="pop.spec.js"></script> -->
-  <script src="pop/index.spec.js"></script>
+  <!-- <script src="pop/index.spec.js"></script> -->
   <!-- <script src="map/index.spec.js"></script> -->
+  <script src="reduce/index.spec.js"></script>
   
 
 </head>
