--- a/staff/aitor-parra/duck-app/index.html
+++ b/staff/aitor-parra/duck-app/index.html
@@ -4,8 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!-- <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link href="style.css" type="text/css" rel="stylesheet"> -->
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link href="style.css" type="text/css" rel="stylesheet">
     <link
         href="https://proxy.duckduckgo.com/iu/?u=http%3A%2F%2F1.bp.blogspot.com%2F_8CUv_GTuMiY%2FS9ILs_GZvOI%2FAAAAAAAAIMs%2F23otPk7WFqI%2Fs1600%2Fluckyduckblogcandy.jpg&f=1&nofb=1"
         type="image/png" rel="Shortcut Icon">
