--- a/staff/aitor-parra/duck-app/index.html
+++ b/staff/aitor-parra/duck-app/index.html
@@ -12,34 +12,26 @@
     <title>LUCKY DUCK</title>
 </head>
 
-<body class="body-grid">
-    <header class="duck-header">
-        <h1 class="duck-header__title">LUCKY DUCK GATE</h1>
-        <!-- <figure class="duck-header__figure figure">
-            <img class="figure__image" src="https://proxy.duckduckgo.com/iu/?u=http%3A%2F%2F1.bp.blogspot.com%2F_8CUv_GTuMiY%2FS9ILs_GZvOI%2FAAAAAAAAIMs%2F23otPk7WFqI%2Fs1600%2Fluckyduckblogcandy.jpg&f=1&nofb=1" alt="Toy Duck">
-        </figure> -->
-        <form class="duck-header__form form">
-            <input class="form__input" type="text" name="inputname">
-            <button class="form__button">DUCK BUTTON FINDER</button>
-        </form>
-
-
-    </header>
-
-
-    <main class="duck-main">
-        <section class="duck-main__section">
+<body class=>
+    <!-- <header class="duck-header"><h1 class="duck-header__title">AQUI EL TITULO</h1></header> -->
+    <!-- <main class="duck-main"> -->
+        <section class="duck-section-multi">
             <h1>AQUI SE VEN LOS PATOS</h1>
-
+            <form class="duck-section__form form">
+                <input class="form__input" type="text" name="inputname">
+                <button class="form__button">DUCK BUTTON FINDER</button>
+            </form>
         </section>
-        <section>
+
+        
+        <section class="duck-section-single">
             <h1>AQUI SE VE EL PATO SELECCIONADO</h1>
-            <article class="duck-main__article"></article>
+            <article class="duck-section-single__article"></article>
 
         </section>
 
 
-    </main>
+    <!-- </main> -->
 
 
     <footer class="duck-footer">
