update a 7 duck-app

--- a/staff/aitor-parra/duck-app/INDEX.html
+++ b/staff/aitor-parra/duck-app/INDEX.html
@@ -7,10 +7,12 @@
     <link
     href="https://proxy.duckduckgo.com/iu/?u=http%3A%2F%2F1.bp.blogspot.com%2F_8CUv_GTuMiY%2FS9ILs_GZvOI%2FAAAAAAAAIMs%2F23otPk7WFqI%2Fs1600%2Fluckyduckblogcandy.jpg&f=1&nofb=1"
     type="image/png" rel="Shortcut Icon">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style/index.css">
 <title>LUCKY DUCK</title>
 </head>
 <body>
+    <!-- <header class="duck-header"><h1 class="duck-header__title">AQUI EL TITULO</h1></header>  -->
+    <main class="duck-main"> 
     <section class="view">
         <form class="search">
             <span class="search__icon"></span>
@@ -33,8 +35,24 @@
             <h5>This just an aproach to the lucky duck website.</p>
             <h5>One HTML in mobile first with BEM and CSS/SASS and with JSON that make it work with 2 views</p>
         </footer>
-    <script src="MAIN_1.js"></script>
-</body>
+        <script src="scripts/utils/ARRAY-SHUFFLE.js"></script>
+        <script src="scripts/utils/FETCH.js"></script>
+        <script src="scripts/utils/FUNCTION-EXTEND.js"></script>
+        <script src="scripts/logic/retrieve-ducks/INDEX.JS"></script>
+        <script src="scripts/logic/search-ducks/INDEX.JS"></script>
+        <script src="scripts/logic/authenticate-user/INDEX.JS"></script>
+        <script src="scripts/logic/register-user/INDEX.JS"></script>
+        <script src="scripts/logic/retrieve-user/INDEX.JS"></script>
+        <script src="scripts/helpers/CALL.JS"></script>
+        <script src="scripts/components/COMPONENT.js"></script>
+        <script src="scripts/components/SEARCH.js"></script>
+        <script src="scripts/components/RESULTS.js"></script>
+        <script src="scripts/components/RESULT-ITEM.js"></script>
+        <script src="scripts/components/DETAIL.js"></script>
+        <script src="scripts/components/FEEDBACK.js"></script>
+        <script src="scripts/components/VIEW.js"></script>
+        <script src="scripts/MAIN.js"></script>
+    </body>
 </html>
 
 
