--- a/staff/aitor-parra/array-functions/SpecRunner.html
+++ b/staff/aitor-parra/array-functions/SpecRunner.html
@@ -19,8 +19,8 @@
   <script src="pop.js"></script> -->
   <!-- <script src="pop/index.js"></script> -->
   <!-- <script src="map/index.js"></script> -->
-  <script src="reduce/index.js"></script>
-
+  <!-- <script src="reduce/index.js"></script> -->
+  <script src="filter/index.js"></script>
   
   <!-- include spec files here... -->
   <!-- <script src="for-each/index.spec.js"></script>
@@ -30,7 +30,8 @@
   <script src="pop.spec.js"></script> -->
   <!-- <script src="pop/index.spec.js"></script> -->
   <!-- <script src="map/index.spec.js"></script> -->
-  <script src="reduce/index.spec.js"></script>
+  <!-- <script src="reduce/index.spec.js"></script> -->
+  <script src="filter/index.spec.js"></script>
   
 
 </head>
