add unshift, filter, and test of includes

--- a/staff/aitor-parra/array-functions/SpecRunner.html
+++ b/staff/aitor-parra/array-functions/SpecRunner.html
@@ -11,27 +11,33 @@
   <script src="lib/jasmine-3.5.0/jasmine-html.js"></script>
   <script src="lib/jasmine-3.5.0/boot.js"></script>
 
-  <!-- include source files here... -->
-  <!-- <script src="for-each/index.js"></script>
-  <script src="push/index.js"></script>
-  <script src="slice/index.js"></script>
-  <script src="shuffle/index.js"></script> 
-  <script src="pop.js"></script> -->
-  <!-- <script src="pop/index.js"></script> -->
-  <!-- <script src="map/index.js"></script> -->
-  <!-- <script src="reduce/index.js"></script> -->
-  <script src="filter/index.js"></script>
+<!-- include source files here... -->
+<script src="for-each/index.js"></script>
+<script src="push/index.js"></script>
+<script src="slice/index.js"></script>
+<script src="shuffle/index.js"></script> 
+<script src="pop.js"></script>
+<script src="pop/index.js"></script> 
+<script src="map/index.js"></script> 
+<script src="reduce/index.js"></script>
+<script src="filter/index.js"></script>
+<script src="includes/index.js"></script>
+<script src="shift/index.js"></script>
+<script src="unshift/index.js"></script>
   
-  <!-- include spec files here... -->
-  <!-- <script src="for-each/index.spec.js"></script>
-  <script src="push/index.spec.js"></script>
-  <script src="slice/index.spec.js"></script>
-  <script src="shuffle/index.spec.js"></script>
-  <script src="pop.spec.js"></script> -->
-  <!-- <script src="pop/index.spec.js"></script> -->
-  <!-- <script src="map/index.spec.js"></script> -->
-  <!-- <script src="reduce/index.spec.js"></script> -->
-  <script src="filter/index.spec.js"></script>
+<!-- include spec files here... -->
+<script src="for-each/index.spec.js"></script>
+<script src="push/index.spec.js"></script>
+<script src="slice/index.spec.js"></script>
+<script src="shuffle/index.spec.js"></script>
+<script src="pop.spec.js"></script> 
+<script src="pop/index.spec.js"></script> 
+<script src="map/index.spec.js"></script>
+<script src="reduce/index.spec.js"></script> 
+<script src="filter/index.spec.js"></script>
+<script src="includes/index.spec.js"></script>
+<script src="shift/index.spec.js"></script>
+<script src="unshift/index.spec.js"></script>
   
 
 </head>
