--- a/staff/aitor-parra/array-functions/SpecRunner.html
+++ b/staff/aitor-parra/array-functions/SpecRunner.html
@@ -12,7 +12,7 @@
   <script src="lib/jasmine-3.5.0/boot.js"></script>
 
 <!-- include source files here... -->
-<script src="for-each/index.js"></script>
+<!-- <script src="for-each/index.js"></script>
 <script src="push/index.js"></script>
 <script src="slice/index.js"></script>
 <script src="shuffle/index.js"></script> 
@@ -23,10 +23,11 @@
 <script src="filter/index.js"></script>
 <script src="includes/index.js"></script>
 <script src="shift/index.js"></script>
-<script src="unshift/index.js"></script>
+<script src="unshift/index.js"></script> -->
+<script src="find/index.js"></script>
   
 <!-- include spec files here... -->
-<script src="for-each/index.spec.js"></script>
+<!-- <script src="for-each/index.spec.js"></script>
 <script src="push/index.spec.js"></script>
 <script src="slice/index.spec.js"></script>
 <script src="shuffle/index.spec.js"></script>
@@ -37,7 +38,8 @@
 <script src="filter/index.spec.js"></script>
 <script src="includes/index.spec.js"></script>
 <script src="shift/index.spec.js"></script>
-<script src="unshift/index.spec.js"></script>
+<script src="unshift/index.spec.js"></script> -->
+<script src="find/index.spec.js"></script>
   
 
 </head>
